# HighPerformanceHttpServer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  benchmark_results.txt  curl_out.txt
docs/: architecture.md  benchmarks.md
include/: buffer_pool.h  connection.h  http_message.h  http_parser.h  server.h  thread_pool.h
src/: buffer_pool.cpp  connection.cpp  http_parser.cpp  main.cpp  server.cpp  thread_pool.cpp
www/: index.html
